infrastructure/auto-scaling-group/main.tf
resource "aws_autoscaling_group" "asg" {
 name  = "react-around-api-full"
 desired capacity = 2
 min_size = 2
 max_size = 3
 termination_policies = ["OldestInstance"]

 Launch_template {
   id   = "aws_launch_templete.template.id"
   version  = $Latest
 }
}

resource "aws_launch_templete" "template" {
  name  = "react-around-api-full"
  instance_type = var.instance_type
  image_id = "ami-0570553cbc6f0e057"
  ebs_optimized = true
  vpc_security_group_ids = [aws_security_group.ec2_sg.id]
}

resource "aws_security_group" "ec2_sg" {
  name = "react-around-api-full-sg"
  description = "react-around-api-full-sg, allow HTTP inbound connections"
  vpc_id = aws_default_vpc.default.id

  ingress {
    from_port = var.nginx_port
    to_port = var.nginx_port
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port = 443
    to_port = 443
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port = 0
    to_port = 0
    protocol = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "Allow HTTP Security Group"
  }

}

#########################################################################

resource "aws_default_vpc" "default" {

}

############################################################################

resource "aws_security_group" "elb_http" {
  name        = "elb_http"
  description = "Allow HTTP traffic to instances through Elastic Load Balancer"
  vpc_id = aws_vpc.my_vpc.id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port       = 0
    to_port         = 0
    protocol        = "-1"
    cidr_blocks     = ["0.0.0.0/0"]
  }

  tags = {
    Name = "Allow HTTP through ELB Security Group"
  }
}

resource "aws_elb" "web_elb" {
  name = "web-elb"
  security_groups = [
    aws_security_group.elb_http.id
  ]
  subnets = [
    aws_subnet.public_us_east_1a.id,
    aws_subnet.public_us_east_1b.id
  ]

  cross_zone_load_balancing   = true

  health_check {
    healthy_threshold = 2
    unhealthy_threshold = 2
    timeout = 3
    interval = 30
    target = "HTTP:80/"
  }

  listener {
    lb_port = 80
    lb_protocol = "http"
    instance_port = "80"
    instance_protocol = "http"
  }

}
